# wmc_sim

./: CMakeLists.txt  README.md
data/: .~lock.elo_ratings.ods#  elo_ratings.ods
include/: elo.h  pairing.h  standing.h  team.h  tournament.h
results/: 1611171528-n10000.csv  1611180940-n10000.csv  1611180941-n10000.csv  1611180942-n10000.csv  1611180943-n10000.csv  1611180944-n10000.csv  1611180945-n10000.csv  1611180946-n10000.csv  1611180947-n10000.csv  1611180948-n10000.csv  1611180949-n10000.csv  processed_data.ods
results/outdated/: 1611171518-n100000.csv  1611171518-n100000_processed.ods  1611171527-n10000.csv  1611171529-n10000.csv
src/: elo.cpp  pairing.cpp  standing.cpp  team.cpp  tournament.cpp  wmc_sim.cpp
